bk_ida/gccida/c3/move_movables
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2237:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2240:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2263:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+74h] [rbp-16Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2268:4: error: expected ';' after expression
rtx temp_1; // [rsp+B0h] [rbp-130h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2268:5: error: use of undeclared identifier 'temp_1'
rtx temp_1; // [rsp+B0h] [rbp-130h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2273:4: error: expected ';' after expression
rtx reg; // [rsp+D8h] [rbp-108h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2273:5: error: use of undeclared identifier 'reg'
rtx reg; // [rsp+D8h] [rbp-108h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2274:4: error: expected ';' after expression
rtx next; // [rsp+E0h] [rbp-100h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2274:5: error: use of undeclared identifier 'next'
rtx next; // [rsp+E0h] [rbp-100h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2275:4: error: expected ';' after expression
rtx n; // [rsp+E8h] [rbp-F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2275:5: error: use of undeclared identifier 'n'
rtx n; // [rsp+E8h] [rbp-F8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2276:4: error: expected ';' after expression
rtx body; // [rsp+F0h] [rbp-F0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2276:5: error: use of undeclared identifier 'body'
rtx body; // [rsp+F0h] [rbp-F0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2278:4: error: expected ';' after expression
rtx fn_reg; // [rsp+100h] [rbp-E0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2278:5: error: use of undeclared identifier 'fn_reg'
rtx fn_reg; // [rsp+100h] [rbp-E0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2280:4: error: expected ';' after expression
rtx temp_0; // [rsp+110h] [rbp-D0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2280:5: error: use of undeclared identifier 'temp_0'
rtx temp_0; // [rsp+110h] [rbp-D0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2281:4: error: expected ';' after expression
rtx temp_0a; // [rsp+110h] [rbp-D0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/loop.c:2281:5: error: use of undeclared identifier 'temp_0a'
rtx temp_0a; // [rsp+110h] [rbp-D0h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/move_movables/src/obj/loop.o] Error 1
